feat: add bundler for typescript code

--- a/.air.toml
+++ b/.air.toml
@@ -7,7 +7,7 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "./build.sh"
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata", "public", "build"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "public", "build", "node_modules"]
   exclude_file = ["src/components/layout_templ.go"]
   exclude_regex = ["_test.go", "_templ.go"]
   exclude_unchanged = false
