--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "stake",
   "scripts": {
-    "css": "tailwindcss -i ./assets/app.css -o ./public/assets/app.css"
+    "css": "tailwindcss -i ./assets/app.css -o ./public/assets/app.css",
+    "bundle": "microbundle -i src/typescript/index.ts -o dist/bundle.js --no-pkg-main -f umd"
   },
   "devDependencies": {
-    "daisyui": "^3.1.7",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "webpack-cli": "^5.1.4",
+    "microbundle": "^0.15.1"
   }
 }
