--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ build
 tmp
 dist
 node_modules
-public/assets/generated/*
+public/assets/css/*
+public/assets/js/*
 public/tsconfig.build.tsbuildinfo
